--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Freelancer - A Free Start Bootstrap Theme</title>
+    <title>README Recruiting: Everyone You Need to Know</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
@@ -39,7 +39,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#page-top">Start Bootstrap</a>
+                <a class="navbar-brand" href="#page-top">README<br/>Recruiting</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -49,10 +49,13 @@
                         <a href="#page-top"></a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#portfolio">Portfolio</a>
+                        <a href="#portfolio">Credits</a>
                     </li>
                     <li class="page-scroll">
                         <a href="#about">About</a>
+                    </li>
+                    <li class="page-scroll">
+                        <a href="#blog">Changelog</a>
                     </li>
                     <li class="page-scroll">
                         <a href="#contact">Contact</a>
@@ -68,11 +71,11 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="img-responsive" src="img/profile.png" alt="">
+                    <img class="img-responsive" src="img/readme.png" alt="">
                     <div class="intro-text">
-                        <span class="name">Start Bootstrap</span>
+                        <span class="name">README<br/>Recruiting</span>
                         <hr class="star-light">
-                        <span class="skills">Web Developer - Graphic Artist - User Experience Designer</span>
+                        <span class="skills">Everyone You Need To Know</span>
                     </div>
                 </div>
             </div>
@@ -83,7 +86,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>Portfolio</h2>
+                    <h2>Credits</h2>
                     <hr class="star-primary">
                 </div>
             </div>
@@ -118,6 +121,7 @@
                         <img src="img/portfolio/circus.png" class="img-responsive" alt="" />
                     </a>
                 </div>
+		<!--
                 <div class="col-sm-4 portfolio-item">
                     <a href="#portfolioModal4" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
@@ -148,6 +152,7 @@
                         <img src="img/portfolio/submarine.png" class="img-responsive" alt="" />
                     </a>
                 </div>
+	        -->
             </div>
         </div>
     </section>
@@ -162,15 +167,17 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</p>
+                    <p>README Recruiting understands the difference between 'back end' and 'full stack', UI and UX, QA and Infrastructure, data science and data entry. We go beyond matching keywords and rebel against filling quotas.</p> 
                 </div>
                 <div class="col-lg-4">
-                    <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</p>
+                    <p>For both companies and potential candidates: Trust us to help you build the right professional relationships, represent your priorities, and save you time. We believe in creating career chemistry! 
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
+		<!--
                     <a href="#" class="btn btn-lg btn-outline">
                         <i class="fa fa-download"></i> Download Theme
                     </a>
+		-->
                 </div>
             </div>
         </div>
@@ -180,7 +187,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>Contact Me</h2>
+                    <h2>Contact</h2>
                     <hr class="star-primary">
                 </div>
             </div>
@@ -223,27 +230,30 @@
                 <div class="row">
                     <div class="footer-col col-md-4">
                         <h3>Location</h3>
-                        <p>3481 Melrose Place
-                            <br>Beverly Hills, CA 90210</p>
+                        <p>San Francisco, CA 94103</p>
                     </div>
                     <div class="footer-col col-md-4">
-                        <h3>Around the Web</h3>
+                        <h3>Follow Us</h3>
                         <ul class="list-inline">
+			    <!--
                             <li><a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a>
                             </li>
                             <li><a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-google-plus"></i></a>
                             </li>
+			    -->
                             <li><a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-twitter"></i></a>
                             </li>
+			    <!--
                             <li><a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a>
                             </li>
                             <li><a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-dribbble"></i></a>
                             </li>
+			    -->
                         </ul>
                     </div>
                     <div class="footer-col col-md-4">
-                        <h3>About Freelance</h3>
-                        <p>Freelance is a free to use, open source Bootstrap theme created by <a href="http://startbootstrap.com">Start Bootstrap</a>.</p>
+                        <h3>README</h3>
+                        <p>Everyone You Need to Know</p>
                     </div>
                 </div>
             </div>
@@ -252,7 +262,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        Copyright &copy; 2014 - Your Name
+                        Copyright &copy; 2014 - README Recruiting
                     </div>
                 </div>
             </div>
@@ -278,10 +288,10 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Project Title</h2>
+                            <h2>Andy Analytics</h2>
                             <hr class="star-primary">
                             <img src="img/portfolio/cabin.png" class="img-responsive img-centered" alt="">
-                            <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
+                            <p>After close to 2 years at the same small startup, Andy was ready to leave small companies behind and experience </p>
                             <ul class="list-inline item-details">
                                 <li>Client: <strong><a href="http://startbootstrap.com">Start Bootstrap</a></strong>
                                 </li>
