--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>README Recruiting: Everyone You Need to Know</title>
+    <title>README Research: Everyone You Need to Know</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
@@ -39,7 +39,9 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#page-top">README<br/>Recruiting</a>
+                <img class="img-responsive" src="img/readme.png" alt=""> 
+                <a class="navbar-brand" href="#page-top">
+                    README Research</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -48,9 +50,9 @@
                     <li class="hidden">
                         <a href="#page-top"></a>
                     </li>
-                    <li class="page-scroll">
+                    <!--<li class="page-scroll">
                         <a href="#portfolio">Credits</a>
-                    </li>
+                    </li>-->
                     <li class="page-scroll">
                         <a href="#about">About</a>
                     </li>
@@ -73,8 +75,7 @@
                 <div class="col-lg-12">
                     <img class="img-responsive" src="img/readme.png" alt="">
                     <div class="intro-text">
-                        <span class="name">README<br/>Recruiting</span>
-                        <hr class="star-light">
+                        <span class="name">README Research</span>
                         <span class="skills">Everyone You Need To Know</span>
                     </div>
                 </div>
@@ -82,6 +83,7 @@
         </div>
     </header>
 
+    <!--
     <section id="portfolio">
         <div class="container">
             <div class="row">
@@ -121,7 +123,7 @@
                         <img src="img/portfolio/circus.png" class="img-responsive" alt="" />
                     </a>
                 </div>
-		<!--
+		
                 <div class="col-sm-4 portfolio-item">
                     <a href="#portfolioModal4" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
@@ -152,8 +154,9 @@
                         <img src="img/portfolio/submarine.png" class="img-responsive" alt="" />
                     </a>
                 </div>
-	        -->
+	        
             </div>
+            -->
         </div>
     </section>
 
@@ -162,23 +165,26 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2>About</h2>
-                    <hr class="star-light">
+                    
                 </div>
             </div>
             <div class="row">
+                <div class="col-lg-4 col-lg-offset-1">
+                    <p>README Research will take the time to understand the technical subtleties for your engineering positions. We go beyond keyword matching and attract candidates based on the uniquely compelling challenges your company is attempting to solve.</p>
+                </div>
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>README Recruiting understands the difference between 'back end' and 'full stack', UI and UX, QA and Infrastructure, data science and data entry. We go beyond matching keywords and rebel against filling quotas.</p> 
+                    <p> For engineers seeking new opportunities, expect an accurate assessment of your skills and talents. Then be prepared to be well-matched with companies looking for exactly what you have to offer.
+                    </p>
                 </div>
-                <div class="col-lg-4">
-                    <p>For both companies and potential candidates: Trust us to help you build the right professional relationships, represent your priorities, and save you time. We believe in creating career chemistry! 
-                </div>
+        <!--
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-		<!--
+		
                     <a href="#" class="btn btn-lg btn-outline">
                         <i class="fa fa-download"></i> Download Theme
                     </a>
-		-->
+		
                 </div>
+                -->
             </div>
         </div>
     </section>
@@ -188,7 +194,6 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2>Contact</h2>
-                    <hr class="star-primary">
                 </div>
             </div>
             <div class="row">
@@ -252,7 +257,7 @@
                         </ul>
                     </div>
                     <div class="footer-col col-md-4">
-                        <h3>README</h3>
+                        <h3>README<br/>Research</h3>
                         <p>Everyone You Need to Know</p>
                     </div>
                 </div>
@@ -262,7 +267,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        Copyright &copy; 2014 - README Recruiting
+                        Copyright &copy; 2014 - README Research
                     </div>
                 </div>
             </div>
